# Iliad

./: .eslintrc.cjs  .prettierrc.json  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.mts  vite.config.ts  vitest.config.mts
.github/workflows/: install.yml  lint.yml  lintAndTest.yml  release.yml  test.yml
src/: App.vue  ace-types.d.ts  aceImports.ts  main.ts  supportedLangs.ts  vite-env.d.ts  vue3-smooth-dnd.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: cli.rs  errors.rs  gui.rs  main.rs  menu.rs
src-tauri/src/commands/: close_window.rs  create_file.rs  create_window.rs  file_info.rs  mkdir.rs  mod.rs  path_exists.rs  read_dir.rs  read_file.rs  read_link.rs  remove_dir.rs  remove_file.rs  rename.rs  start_lsp.rs  write_file.rs
src-tauri/src/commands/state/: consts.rs  get_state.rs  mod.rs  update_state.rs
src/api/: closeWindow.ts  createFile.ts  createWindow.ts  event.ts  fileInfo.ts  getState.ts  invoke.ts  mkdir.ts  pathExists.ts  readDir.ts  readFile.ts  readLink.ts  removeDir.ts  removeFile.ts  rename.ts  updateState.ts  writeFile.ts
src/contextMenus/: fileContextMenu.ts  folderContextMenu.ts
src/editorStore/: globalStore.ts  settingsStore.ts  store.ts  workspaceStore.ts
src/lsp/: AceLspCompleter.ts  TypescriptCompleter.ts  lsp.ts  typescriptLsp.ts
src/managers/: animations.manager.ts  menu.manager.ts  (+1 more)
types/: CountryLanguages.ts  DropZones.ts  Encodings.ts  FileSystem.ts  Pages.ts  Workspace.ts  index.ts  utils.ts
(+162 files in other folders)
