[package]
name = "illiade"
version = "0.0.0"
description = "Illiade IDE"
authors = ["Hubert Jabłoński"]
license = "MIT"
repository = "https://github.com/KrosFire/Illiade"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "cli", "clipboard-write-text", "path-all", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri-plugin-fs-watch = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
thiserror = "1.0"
tauri-plugin-context-menu = "0.7.1"
signal-hook = "0.3.17"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
